--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,17 @@ header {
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    transition: 0.3s ease-in-out;
+}
+
+.fechar-menu {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .container-menu-hamburger .msg-bem-vindo {
-    color: #AE091A;
+    color: var(--vermelho-detalhes);
     font-family: 'Homenaje', sans-serif;
     font-size: 35px;
     font-style: normal;
@@ -216,6 +223,12 @@ header {
     flex-direction: column;
 }
 
+.fechar-carrinho {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
 .carrinho-card {
     display: flex;
     align-items: center;
@@ -241,7 +254,7 @@ header {
 }
 
 .nome-produto-carrinho {
-    color: #000;
+    color: var(--preto-conteudo);
     font-size: 16px;
     font-style: italic;
     font-weight: 300;
@@ -249,8 +262,7 @@ header {
 }
 
 .valor-produto-carrinho {
-    color: #000;
-    font-family: Inter;
+    color: var(--preto-conteudo);
     font-size: 20px;
     font-style: italic;
     font-weight: 700;
@@ -426,6 +438,11 @@ section.imagens-links {
     line-height: normal;
     cursor: pointer;
     border-radius: 5px;
+    transition: 0.2s ease-in-out;
+}
+
+.botao-preco-produto:hover {
+    opacity: 0.8;
 }
 
 /* RODAPÉ */
