--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,7 @@ header {
     top: 20%;
     left: 0;
     width: 350px;
-    height: 85vh;
-    padding: 60px 25px 10px 25px;
+    padding: 60px 25px 35px 25px;
     border: 2px solid var(--preto-conteudo);
     z-index: 2;
     border-radius: 5px;
@@ -380,7 +379,7 @@ section.imagens-links {
     padding-top: 30px;
 }
 
-.titulo-secao {
+.titulo-secao, .titulo-secao-produtos {
     text-align: center;
     color: var(--vermelho-detalhes);
     font-family: 'Inter', sans-serif;
@@ -390,15 +389,22 @@ section.imagens-links {
     line-height: normal;
 }
 
+.titulo-secao-produtos {
+    padding-top: 150px;
+}
+
 .container-produtos {
-    display: flex;
-    justify-content: space-around;
-    margin: 80px 0 120px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 100px;
+    margin: 80px auto;
 }
 
 .card-produto {
+    margin: 0 auto;
     display: flex;
-    width: 20%;
+    width: 50%;
+    align-items: center;
     flex-direction: column;
     gap: 10px;
 }
